smal lfix on PurchaseOrders/PartialDetails

--- a/Source/CriticalPath.Web/Web.config
+++ b/Source/CriticalPath.Web/Web.config
@@ -29,6 +29,7 @@
   <system.web>
     <globalization uiCulture="en-GB" culture="en-GB" requestEncoding="utf-8" responseEncoding="utf-8" responseHeaderEncoding="utf-8" />
     <!--
+    <globalization uiCulture="tr-TR" culture="tr-TR" requestEncoding="utf-8" responseEncoding="utf-8" responseHeaderEncoding="utf-8" />
     <globalization enableClientBasedCulture="true" uiCulture="auto" culture="auto" requestEncoding="utf-8" responseEncoding="utf-8" responseHeaderEncoding="utf-8" />
 -->
     <authentication mode="None" />
